--- a/tasks/variables-hashed-passwd.yml
+++ b/tasks/variables-hashed-passwd.yml
@@ -9,6 +9,7 @@
           - -s
           - '{{ ldap_root_passwd }}'
       changed_when: false
+      check_mode: no
       register: cmd_ldap_root_hashed_passwd
     - name: Define ldap_root_hashed_passwd
       set_fact:
@@ -25,6 +26,7 @@
           - -s
           - '{{ ldap_admin_passwd }}'
       changed_when: false
+      check_mode: no
       register: cmd_ldap_admin_hashed_passwd
     - name: Define ldap_admin_hashed_passwd
       set_fact:
