--- a/tasks/module-refint.yml
+++ b/tasks/module-refint.yml
@@ -17,14 +17,14 @@
       - top
     attributes:
       cn: module
-      olcModulePath: '{{ slap_module_path }}'
+      olcModulePath: '{{ slapd_module_path }}'
       olcModuleLoad: refint.la
     state: present
 
 - name: "Check the refint overlay was already exists"
   become: yes
   community.general.ldap_search:
-    dn: "olcDatabase={1}{{ slap_db_type }},cn=config"
+    dn: "olcDatabase={1}{{ slapd_db_type }},cn=config"
     schema: true
     scope: "onelevel"
     filter: "(&(olcOverlay=refint)(objectClass=olcRefintConfig))"
@@ -34,7 +34,7 @@
 - name: "Ensure the refint overlay was registered"
   become: yes
   ldap_entry:
-    dn: "{%- if overlay_refint.results[0] is defined -%}{{ overlay_refint.results[0].dn }}{%- else -%}olcOverlay=refint,olcDatabase={1}{{ slap_db_type }},cn=config{%- endif -%}"
+    dn: "{%- if overlay_refint.results[0] is defined -%}{{ overlay_refint.results[0].dn }}{%- else -%}olcOverlay=refint,olcDatabase={1}{{ slapd_db_type }},cn=config{%- endif -%}"
     objectClass:
       - olcOverlayConfig
       - olcRefintConfig
