--- a/vars/Debian.yml
+++ b/vars/Debian.yml
@@ -10,7 +10,7 @@ __slapd_install_python_module_via_pip: false
 __ldap_owner: "openldap"
 __ldap_group: "openldap"
 __ldap_conf_file: "/etc/ldap/ldap.conf"
-__slap_daemon: "slapd"
-__slap_conf_file: "/etc/ldap/slap.conf"
-__slap_module_path: "/usr/lib/ldap"
-__slap_db_type: "mdb"
+__slapd_daemon: "slapd"
+__slapd_conf_file: "/etc/ldap/slap.conf"
+__slapd_module_path: "/usr/lib/ldap"
+__slapd_db_type: "mdb"
