--- a/vars/Debian.yml
+++ b/vars/Debian.yml
@@ -6,6 +6,8 @@ __ldap_python_modules:
   - python3-ldap
 __ldap_python_modules_pip:
   - python-ldap
+__ldap_cmd_ldapmodify: "/usr/bin/ldapmodify"
+__ldap_cmd_ldapadd: "/usr/bin/ldapadd"
 __slapd_install_python_module_via_pip: false
 __ldap_owner: "openldap"
 __ldap_group: "openldap"
@@ -14,3 +16,5 @@ __slapd_daemon: "slapd"
 __slapd_conf_file: "/etc/ldap/slap.conf"
 __slapd_module_path: "/usr/lib/ldap"
 __slapd_db_type: "mdb"
+__slapd_cmd_slappasswd: "/usr/sbin/slappasswd"
+__slapd_cmd_slapcat: "/usr/sbin/slapcat"
