--- a/tasks/configure-admin.yml
+++ b/tasks/configure-admin.yml
@@ -1,6 +1,6 @@
 ---
 - name: Configure LDAP root to password
-  become: yes
+  become: true
   ldap_attrs:
     dn: "olcDatabase={0}config,cn=config"
     attributes:
@@ -8,13 +8,15 @@
     state: exact
 
 - name: Configure the database to under access control
-  become: yes
+  become: true
   ldap_attrs:
     dn: 'olcDatabase={1}{{ slapd_db_type }},cn=config'
     attributes:
       olcAccess:
-        - 'to * by 
-          by dn="{{ ldap_admin_dn }}" manage'
+        - 'to *
+          by dn="{{ ldap_admin_dn }}" manage
+          by self read
+          by * read'
         - 'to attrs=userPassword
           by dn="{{ ldap_admin_dn }}" write
           by anonymous auth
@@ -23,6 +25,12 @@
         - 'to attrs=shadowLastChange
           by self write
           by * read'
+        - 'to dn.children="ou=users,{{ ldap_basedn }}"
+          by self read
+          by anonymous read'
+        - 'to dn.children="ou=groups,{{ ldap_basedn }}"
+          by self read
+          by anonymous read'
         - 'to dn.base=""
           by * read'
       olcSuffix: '{{ ldap_basedn }}'
