--- a/tasks/schema-misc.yml
+++ b/tasks/schema-misc.yml
@@ -1,16 +1,16 @@
 ---
 - name: "Check the misc schema was already exists"
-  become: yes
+  become: true
   community.general.ldap_search:
     dn: "cn=schema,cn=config"
     schema: true
     scope: "onelevel"
     filter: "(&(cn={*}misc)(objectClass=olcSchemaConfig))"
-  check_mode: no
+  check_mode: false
   register: schema_misc
 
 - name: "Ensure the misc schema was registered"
-  become: yes
+  become: true
   ldap_entry:
     dn: >-
       {%- if schema_misc.results[0] is defined -%}
@@ -22,48 +22,48 @@
     attributes:
       cn: "misc"
       olcAttributeTypes:
-      - "( 2.16.840.1.113730.3.1.13
-           NAME 'mailLocalAddress'
-           DESC 'RFC822 email address of this recipient'
-           EQUALITY caseIgnoreIA5Match
-           SYNTAX 1.3.6.1.4.1.1466.115.121.1.26{256} )"
-      - "( 2.16.840.1.113730.3.1.18
-           NAME 'mailHost'
-           DESC 'FQDN of the SMTP/MTA of this recipient'
-           EQUALITY caseIgnoreIA5Match
-           SYNTAX 1.3.6.1.4.1.1466.115.121.1.26{256}
-           SINGLE-VALUE )"
-      - "( 2.16.840.1.113730.3.1.47
-           NAME 'mailRoutingAddress'
-           DESC 'RFC822 routing address of this recipient'
-           EQUALITY caseIgnoreIA5Match
-           SYNTAX 1.3.6.1.4.1.1466.115.121.1.26{256}
-           SINGLE-VALUE )"
-      #-----------------------------------------------------------
-      # draft-srivastava-ldap-mail-00.txt !!!EXPIRED!!!
-      #  (a work in progress)
-      #
-      - "( 1.3.6.1.4.1.42.2.27.2.1.15
-           NAME 'rfc822MailMember'
-           DESC 'rfc822 mail address of group member(s)'
-           EQUALITY caseIgnoreIA5Match
-           SYNTAX 1.3.6.1.4.1.1466.115.121.1.26 )"
+        - "( 2.16.840.1.113730.3.1.13
+             NAME 'mailLocalAddress'
+             DESC 'RFC822 email address of this recipient'
+             EQUALITY caseIgnoreIA5Match
+             SYNTAX 1.3.6.1.4.1.1466.115.121.1.26{256} )"
+        - "( 2.16.840.1.113730.3.1.18
+             NAME 'mailHost'
+             DESC 'FQDN of the SMTP/MTA of this recipient'
+             EQUALITY caseIgnoreIA5Match
+             SYNTAX 1.3.6.1.4.1.1466.115.121.1.26{256}
+             SINGLE-VALUE )"
+        - "( 2.16.840.1.113730.3.1.47
+             NAME 'mailRoutingAddress'
+             DESC 'RFC822 routing address of this recipient'
+             EQUALITY caseIgnoreIA5Match
+             SYNTAX 1.3.6.1.4.1.1466.115.121.1.26{256}
+             SINGLE-VALUE )"
+        #
+        # draft-srivastava-ldap-mail-00.txt !!!EXPIRED!!!
+        #  (a work in progress)
+        #
+        - "( 1.3.6.1.4.1.42.2.27.2.1.15
+             NAME 'rfc822MailMember'
+             DESC 'rfc822 mail address of group member(s)'
+             EQUALITY caseIgnoreIA5Match
+             SYNTAX 1.3.6.1.4.1.1466.115.121.1.26 )"
       olcObjectClasses:
-      # I-D leaves this OID TBD.
-      # iPlanet uses 2.16.840.1.113.730.3.2.147 but that is an
-      # improperly delegated OID.  A typo is likely.
-      - "( 2.16.840.1.113730.3.2.147
-           NAME 'inetLocalMailRecipient'
-           DESC 'Internet local mail recipient'
-           SUP top AUXILIARY
-           MAY  ( mailLocalAddress $ mailHost $ mailRoutingAddress ) )"
-      #-----------------------------------------------------------
-      # !!!no I-D!!!
-      #  (a work in progress)
-      #
-      - "( 1.3.6.1.4.1.42.2.27.1.2.5
-           NAME 'nisMailAlias'
-           DESC 'NIS mail alias'
-           SUP top STRUCTURAL
-           MUST cn
-           MAY rfc822MailMember )"
+        # I-D leaves this OID TBD.
+        # iPlanet uses 2.16.840.1.113.730.3.2.147 but that is an
+        # improperly delegated OID.  A typo is likely.
+        - "( 2.16.840.1.113730.3.2.147
+             NAME 'inetLocalMailRecipient'
+             DESC 'Internet local mail recipient'
+             SUP top AUXILIARY
+             MAY  ( mailLocalAddress $ mailHost $ mailRoutingAddress ) )"
+        #
+        # !!!no I-D!!!
+        #  (a work in progress)
+        #
+        - "( 1.3.6.1.4.1.42.2.27.1.2.5
+             NAME 'nisMailAlias'
+             DESC 'NIS mail alias'
+             SUP top STRUCTURAL
+             MUST cn
+             MAY rfc822MailMember )"
