--- a/tasks/schema-nis.yml
+++ b/tasks/schema-nis.yml
@@ -1,16 +1,16 @@
 ---
 - name: "Check the nis schema was already exists"
-  become: yes
+  become: true
   community.general.ldap_search:
     dn: "cn=schema,cn=config"
     schema: true
     scope: "onelevel"
     filter: "(&(cn={*}nis)(objectClass=olcSchemaConfig))"
-  check_mode: no
+  check_mode: false
   register: schema_nis
 
 - name: "Ensure the nis schema was registered"
-  become: yes
+  become: true
   ldap_entry:
     dn: >-
       {%- if schema_nis.results[0] is defined -%}
@@ -22,154 +22,154 @@
     attributes:
       cn: "nis"
       olcAttributeTypes:
-      - "( 1.3.6.1.1.1.1.2 NAME 'gecos'
-           DESC 'The GECOS field; the common name'
-           EQUALITY caseIgnoreIA5Match
-           SUBSTR caseIgnoreIA5SubstringsMatch
-           SYNTAX 1.3.6.1.4.1.1466.115.121.1.26 SINGLE-VALUE )"
-      - "( 1.3.6.1.1.1.1.3 NAME 'homeDirectory'
-           DESC 'The absolute path to the home directory'
-           EQUALITY caseExactIA5Match
-           SYNTAX 1.3.6.1.4.1.1466.115.121.1.26 SINGLE-VALUE )"
-      - "( 1.3.6.1.1.1.1.4 NAME 'loginShell'
-           DESC 'The path to the login shell'
-           EQUALITY caseExactIA5Match
-           SYNTAX 1.3.6.1.4.1.1466.115.121.1.26 SINGLE-VALUE )"
-      - "( 1.3.6.1.1.1.1.5 NAME 'shadowLastChange'
-           EQUALITY integerMatch
-           SYNTAX 1.3.6.1.4.1.1466.115.121.1.27 SINGLE-VALUE )"
-      - "( 1.3.6.1.1.1.1.6 NAME 'shadowMin'
-           EQUALITY integerMatch
-           SYNTAX 1.3.6.1.4.1.1466.115.121.1.27 SINGLE-VALUE )"
-      - "( 1.3.6.1.1.1.1.7 NAME 'shadowMax'
-           EQUALITY integerMatch
-           SYNTAX 1.3.6.1.4.1.1466.115.121.1.27 SINGLE-VALUE )"
-      - "( 1.3.6.1.1.1.1.8 NAME 'shadowWarning'
-           EQUALITY integerMatch
-           SYNTAX 1.3.6.1.4.1.1466.115.121.1.27 SINGLE-VALUE )"
-      - "( 1.3.6.1.1.1.1.9 NAME 'shadowInactive'
-           EQUALITY integerMatch
-           SYNTAX 1.3.6.1.4.1.1466.115.121.1.27 SINGLE-VALUE )"
-      - "( 1.3.6.1.1.1.1.10 NAME 'shadowExpire'
-           EQUALITY integerMatch
-           SYNTAX 1.3.6.1.4.1.1466.115.121.1.27 SINGLE-VALUE )"
-      - "( 1.3.6.1.1.1.1.11 NAME 'shadowFlag'
-           EQUALITY integerMatch
-           SYNTAX 1.3.6.1.4.1.1466.115.121.1.27 SINGLE-VALUE )"
-      - "( 1.3.6.1.1.1.1.12 NAME 'memberUid'
-           EQUALITY caseExactIA5Match
-           SUBSTR caseExactIA5SubstringsMatch
-           SYNTAX 1.3.6.1.4.1.1466.115.121.1.26 )"
-      - "( 1.3.6.1.1.1.1.13 NAME 'memberNisNetgroup'
-           EQUALITY caseExactIA5Match
-           SUBSTR caseExactIA5SubstringsMatch
-           SYNTAX 1.3.6.1.4.1.1466.115.121.1.26 )"
-      - "( 1.3.6.1.1.1.1.14 NAME 'nisNetgroupTriple'
-           DESC 'Netgroup triple'
-           SYNTAX 1.3.6.1.1.1.0.0 )"
-      - "( 1.3.6.1.1.1.1.15 NAME 'ipServicePort'
-           EQUALITY integerMatch
-           SYNTAX 1.3.6.1.4.1.1466.115.121.1.27 SINGLE-VALUE )"
-      - "( 1.3.6.1.1.1.1.16 NAME 'ipServiceProtocol'
-           SUP name )"
-      - "( 1.3.6.1.1.1.1.17 NAME 'ipProtocolNumber'
-           EQUALITY integerMatch
-           SYNTAX 1.3.6.1.4.1.1466.115.121.1.27 SINGLE-VALUE )"
-      - "( 1.3.6.1.1.1.1.18 NAME 'oncRpcNumber'
-           EQUALITY integerMatch
-           SYNTAX 1.3.6.1.4.1.1466.115.121.1.27 SINGLE-VALUE )"
-      - "( 1.3.6.1.1.1.1.19 NAME 'ipHostNumber'
-           DESC 'IP address'
-           EQUALITY caseIgnoreIA5Match
-           SYNTAX 1.3.6.1.4.1.1466.115.121.1.26{128} )"
-      - "( 1.3.6.1.1.1.1.20 NAME 'ipNetworkNumber'
-           DESC 'IP network'
-           EQUALITY caseIgnoreIA5Match
-           SYNTAX 1.3.6.1.4.1.1466.115.121.1.26{128} SINGLE-VALUE )"
-      - "( 1.3.6.1.1.1.1.21 NAME 'ipNetmaskNumber'
-           DESC 'IP netmask'
-           EQUALITY caseIgnoreIA5Match
-           SYNTAX 1.3.6.1.4.1.1466.115.121.1.26{128} SINGLE-VALUE )"
-      - "( 1.3.6.1.1.1.1.22 NAME 'macAddress'
-           DESC 'MAC address'
-           EQUALITY caseIgnoreIA5Match
-           SYNTAX 1.3.6.1.4.1.1466.115.121.1.26{128} )"
-      - "( 1.3.6.1.1.1.1.23 NAME 'bootParameter'
-           DESC 'rpc.bootparamd parameter'
-           SYNTAX 1.3.6.1.1.1.0.1 )"
-      - "( 1.3.6.1.1.1.1.24 NAME 'bootFile'
-           DESC 'Boot image name'
-           EQUALITY caseExactIA5Match
-           SYNTAX 1.3.6.1.4.1.1466.115.121.1.26 )"
-      - "( 1.3.6.1.1.1.1.26 NAME 'nisMapName'
-           SUP name )"
-      - "( 1.3.6.1.1.1.1.27 NAME 'nisMapEntry'
-           EQUALITY caseExactIA5Match
-           SUBSTR caseExactIA5SubstringsMatch
-           SYNTAX 1.3.6.1.4.1.1466.115.121.1.26{1024} SINGLE-VALUE )"
+        - "( 1.3.6.1.1.1.1.2 NAME 'gecos'
+             DESC 'The GECOS field; the common name'
+             EQUALITY caseIgnoreIA5Match
+             SUBSTR caseIgnoreIA5SubstringsMatch
+             SYNTAX 1.3.6.1.4.1.1466.115.121.1.26 SINGLE-VALUE )"
+        - "( 1.3.6.1.1.1.1.3 NAME 'homeDirectory'
+             DESC 'The absolute path to the home directory'
+             EQUALITY caseExactIA5Match
+             SYNTAX 1.3.6.1.4.1.1466.115.121.1.26 SINGLE-VALUE )"
+        - "( 1.3.6.1.1.1.1.4 NAME 'loginShell'
+             DESC 'The path to the login shell'
+             EQUALITY caseExactIA5Match
+             SYNTAX 1.3.6.1.4.1.1466.115.121.1.26 SINGLE-VALUE )"
+        - "( 1.3.6.1.1.1.1.5 NAME 'shadowLastChange'
+             EQUALITY integerMatch
+             SYNTAX 1.3.6.1.4.1.1466.115.121.1.27 SINGLE-VALUE )"
+        - "( 1.3.6.1.1.1.1.6 NAME 'shadowMin'
+             EQUALITY integerMatch
+             SYNTAX 1.3.6.1.4.1.1466.115.121.1.27 SINGLE-VALUE )"
+        - "( 1.3.6.1.1.1.1.7 NAME 'shadowMax'
+             EQUALITY integerMatch
+             SYNTAX 1.3.6.1.4.1.1466.115.121.1.27 SINGLE-VALUE )"
+        - "( 1.3.6.1.1.1.1.8 NAME 'shadowWarning'
+             EQUALITY integerMatch
+             SYNTAX 1.3.6.1.4.1.1466.115.121.1.27 SINGLE-VALUE )"
+        - "( 1.3.6.1.1.1.1.9 NAME 'shadowInactive'
+             EQUALITY integerMatch
+             SYNTAX 1.3.6.1.4.1.1466.115.121.1.27 SINGLE-VALUE )"
+        - "( 1.3.6.1.1.1.1.10 NAME 'shadowExpire'
+             EQUALITY integerMatch
+             SYNTAX 1.3.6.1.4.1.1466.115.121.1.27 SINGLE-VALUE )"
+        - "( 1.3.6.1.1.1.1.11 NAME 'shadowFlag'
+             EQUALITY integerMatch
+             SYNTAX 1.3.6.1.4.1.1466.115.121.1.27 SINGLE-VALUE )"
+        - "( 1.3.6.1.1.1.1.12 NAME 'memberUid'
+             EQUALITY caseExactIA5Match
+             SUBSTR caseExactIA5SubstringsMatch
+             SYNTAX 1.3.6.1.4.1.1466.115.121.1.26 )"
+        - "( 1.3.6.1.1.1.1.13 NAME 'memberNisNetgroup'
+             EQUALITY caseExactIA5Match
+             SUBSTR caseExactIA5SubstringsMatch
+             SYNTAX 1.3.6.1.4.1.1466.115.121.1.26 )"
+        - "( 1.3.6.1.1.1.1.14 NAME 'nisNetgroupTriple'
+             DESC 'Netgroup triple'
+             SYNTAX 1.3.6.1.1.1.0.0 )"
+        - "( 1.3.6.1.1.1.1.15 NAME 'ipServicePort'
+             EQUALITY integerMatch
+             SYNTAX 1.3.6.1.4.1.1466.115.121.1.27 SINGLE-VALUE )"
+        - "( 1.3.6.1.1.1.1.16 NAME 'ipServiceProtocol'
+             SUP name )"
+        - "( 1.3.6.1.1.1.1.17 NAME 'ipProtocolNumber'
+             EQUALITY integerMatch
+             SYNTAX 1.3.6.1.4.1.1466.115.121.1.27 SINGLE-VALUE )"
+        - "( 1.3.6.1.1.1.1.18 NAME 'oncRpcNumber'
+             EQUALITY integerMatch
+             SYNTAX 1.3.6.1.4.1.1466.115.121.1.27 SINGLE-VALUE )"
+        - "( 1.3.6.1.1.1.1.19 NAME 'ipHostNumber'
+             DESC 'IP address'
+             EQUALITY caseIgnoreIA5Match
+             SYNTAX 1.3.6.1.4.1.1466.115.121.1.26{128} )"
+        - "( 1.3.6.1.1.1.1.20 NAME 'ipNetworkNumber'
+             DESC 'IP network'
+             EQUALITY caseIgnoreIA5Match
+             SYNTAX 1.3.6.1.4.1.1466.115.121.1.26{128} SINGLE-VALUE )"
+        - "( 1.3.6.1.1.1.1.21 NAME 'ipNetmaskNumber'
+             DESC 'IP netmask'
+             EQUALITY caseIgnoreIA5Match
+             SYNTAX 1.3.6.1.4.1.1466.115.121.1.26{128} SINGLE-VALUE )"
+        - "( 1.3.6.1.1.1.1.22 NAME 'macAddress'
+             DESC 'MAC address'
+             EQUALITY caseIgnoreIA5Match
+             SYNTAX 1.3.6.1.4.1.1466.115.121.1.26{128} )"
+        - "( 1.3.6.1.1.1.1.23 NAME 'bootParameter'
+             DESC 'rpc.bootparamd parameter'
+             SYNTAX 1.3.6.1.1.1.0.1 )"
+        - "( 1.3.6.1.1.1.1.24 NAME 'bootFile'
+             DESC 'Boot image name'
+             EQUALITY caseExactIA5Match
+             SYNTAX 1.3.6.1.4.1.1466.115.121.1.26 )"
+        - "( 1.3.6.1.1.1.1.26 NAME 'nisMapName'
+             SUP name )"
+        - "( 1.3.6.1.1.1.1.27 NAME 'nisMapEntry'
+             EQUALITY caseExactIA5Match
+             SUBSTR caseExactIA5SubstringsMatch
+             SYNTAX 1.3.6.1.4.1.1466.115.121.1.26{1024} SINGLE-VALUE )"
       olcObjectClasses:
-      - "( 1.3.6.1.1.1.2.0 NAME 'posixAccount'
-           DESC 'Abstraction of an account with POSIX attributes'
-           SUP top AUXILIARY
-           MUST ( cn $ uid $ uidNumber $ gidNumber $ homeDirectory )
-           MAY ( userPassword $ loginShell $ gecos $ description ) )"
-      - "( 1.3.6.1.1.1.2.1 NAME 'shadowAccount'
-           DESC 'Additional attributes for shadow passwords'
-           SUP top AUXILIARY
-           MUST uid
-           MAY ( userPassword $ shadowLastChange $ shadowMin $
-                 shadowMax $ shadowWarning $ shadowInactive $
-                 shadowExpire $ shadowFlag $ description ) )"
-      - "( 1.3.6.1.1.1.2.2 NAME 'posixGroup'
-           DESC 'Abstraction of a group of accounts'
-           SUP top STRUCTURAL
-           MUST ( cn $ gidNumber )
-           MAY ( userPassword $ memberUid $ description ) )"
-      - "( 1.3.6.1.1.1.2.3 NAME 'ipService'
-           DESC 'Abstraction an Internet Protocol service'
-           SUP top STRUCTURAL
-           MUST ( cn $ ipServicePort $ ipServiceProtocol )
-           MAY ( description ) )"
-      - "( 1.3.6.1.1.1.2.4 NAME 'ipProtocol'
-           DESC 'Abstraction of an IP protocol'
-           SUP top STRUCTURAL
-           MUST ( cn $ ipProtocolNumber $ description )
-           MAY description )"
-      - "( 1.3.6.1.1.1.2.5 NAME 'oncRpc'
-           DESC 'Abstraction of an ONC/RPC binding'
-           SUP top STRUCTURAL
-           MUST ( cn $ oncRpcNumber $ description )
-           MAY description )"
-      - "( 1.3.6.1.1.1.2.6 NAME 'ipHost'
-           DESC 'Abstraction of a host, an IP device'
-           SUP top AUXILIARY
-           MUST ( cn $ ipHostNumber )
-           MAY ( l $ description $ manager ) )"
-      - "( 1.3.6.1.1.1.2.7 NAME 'ipNetwork'
-           DESC 'Abstraction of an IP network'
-           SUP top STRUCTURAL
-           MUST ( cn $ ipNetworkNumber )
-           MAY ( ipNetmaskNumber $ l $ description $ manager ) )"
-      - "( 1.3.6.1.1.1.2.8 NAME 'nisNetgroup'
-           DESC 'Abstraction of a netgroup'
-           SUP top STRUCTURAL
-           MUST cn
-           MAY ( nisNetgroupTriple $ memberNisNetgroup $ description ) )"
-      - "( 1.3.6.1.1.1.2.9 NAME 'nisMap'
-           DESC 'A generic abstraction of a NIS map'
-           SUP top STRUCTURAL
-           MUST nisMapName
-           MAY description )"
-      - "( 1.3.6.1.1.1.2.10 NAME 'nisObject'
-           DESC 'An entry in a NIS map'
-           SUP top STRUCTURAL
-           MUST ( cn $ nisMapEntry $ nisMapName )
-           MAY description )"
-      - "( 1.3.6.1.1.1.2.11 NAME 'ieee802Device'
-           DESC 'A device with a MAC address'
-           SUP top AUXILIARY
-           MAY macAddress )"
-      - "( 1.3.6.1.1.1.2.12 NAME 'bootableDevice'
-           DESC 'A device with boot parameters'
-           SUP top AUXILIARY
-           MAY ( bootFile $ bootParameter ) )"
+        - "( 1.3.6.1.1.1.2.0 NAME 'posixAccount'
+             DESC 'Abstraction of an account with POSIX attributes'
+             SUP top AUXILIARY
+             MUST ( cn $ uid $ uidNumber $ gidNumber $ homeDirectory )
+             MAY ( userPassword $ loginShell $ gecos $ description ) )"
+        - "( 1.3.6.1.1.1.2.1 NAME 'shadowAccount'
+             DESC 'Additional attributes for shadow passwords'
+             SUP top AUXILIARY
+             MUST uid
+             MAY ( userPassword $ shadowLastChange $ shadowMin $
+                   shadowMax $ shadowWarning $ shadowInactive $
+                   shadowExpire $ shadowFlag $ description ) )"
+        - "( 1.3.6.1.1.1.2.2 NAME 'posixGroup'
+             DESC 'Abstraction of a group of accounts'
+             SUP top STRUCTURAL
+             MUST ( cn $ gidNumber )
+             MAY ( userPassword $ memberUid $ description ) )"
+        - "( 1.3.6.1.1.1.2.3 NAME 'ipService'
+             DESC 'Abstraction an Internet Protocol service'
+             SUP top STRUCTURAL
+             MUST ( cn $ ipServicePort $ ipServiceProtocol )
+             MAY ( description ) )"
+        - "( 1.3.6.1.1.1.2.4 NAME 'ipProtocol'
+             DESC 'Abstraction of an IP protocol'
+             SUP top STRUCTURAL
+             MUST ( cn $ ipProtocolNumber $ description )
+             MAY description )"
+        - "( 1.3.6.1.1.1.2.5 NAME 'oncRpc'
+             DESC 'Abstraction of an ONC/RPC binding'
+             SUP top STRUCTURAL
+             MUST ( cn $ oncRpcNumber $ description )
+             MAY description )"
+        - "( 1.3.6.1.1.1.2.6 NAME 'ipHost'
+             DESC 'Abstraction of a host, an IP device'
+             SUP top AUXILIARY
+             MUST ( cn $ ipHostNumber )
+             MAY ( l $ description $ manager ) )"
+        - "( 1.3.6.1.1.1.2.7 NAME 'ipNetwork'
+             DESC 'Abstraction of an IP network'
+             SUP top STRUCTURAL
+             MUST ( cn $ ipNetworkNumber )
+             MAY ( ipNetmaskNumber $ l $ description $ manager ) )"
+        - "( 1.3.6.1.1.1.2.8 NAME 'nisNetgroup'
+             DESC 'Abstraction of a netgroup'
+             SUP top STRUCTURAL
+             MUST cn
+             MAY ( nisNetgroupTriple $ memberNisNetgroup $ description ) )"
+        - "( 1.3.6.1.1.1.2.9 NAME 'nisMap'
+             DESC 'A generic abstraction of a NIS map'
+             SUP top STRUCTURAL
+             MUST nisMapName
+             MAY description )"
+        - "( 1.3.6.1.1.1.2.10 NAME 'nisObject'
+             DESC 'An entry in a NIS map'
+             SUP top STRUCTURAL
+             MUST ( cn $ nisMapEntry $ nisMapName )
+             MAY description )"
+        - "( 1.3.6.1.1.1.2.11 NAME 'ieee802Device'
+             DESC 'A device with a MAC address'
+             SUP top AUXILIARY
+             MAY macAddress )"
+        - "( 1.3.6.1.1.1.2.12 NAME 'bootableDevice'
+             DESC 'A device with boot parameters'
+             SUP top AUXILIARY
+             MAY ( bootFile $ bootParameter ) )"
