--- a/tasks/setup-Debian.yml
+++ b/tasks/setup-Debian.yml
@@ -1,13 +1,13 @@
 ---
 - name: Install LDAP packages.
-  become: yes
+  become: true
   apt:
     name: "{{ ldap_server_packages }}"
   environment:
     DEBIAN_FRONTEND: noninteractive
 
 - name: Install python packages for LDAP.
-  become: yes
+  become: true
   apt:
     name: "{{ ldap_python_modules }}"
   environment:
@@ -15,21 +15,21 @@
   when: not slapd_install_python_module_via_pip
 
 - name: Install python packages for LDAP using pip.
-  become: yes
+  become: true
   pip:
     name: "{{ ldap_python_modules_pip }}"
   when: slapd_install_python_module_via_pip
 
-  #- name: "Ensure values of the slapd with debconf."
-  #  become: yes
-  #  debconf:
-  #    name: slapd
-  #    question: slapd/domain
-  #    vtype: "string"
-  #    value: "{{ ldap_domain }}"
-  #  register: debconf_slapd_domain
-  #
-  #- name: "Reconfigure the slapd"
-  #  become: yes
-  #  command: dpkg-reconfigure -f noninteractive slapd
-  #  when: debconf_slapd_domain.changed
+# - name: "Ensure values of the slapd with debconf."
+#   become: yes
+#   debconf:
+#     name: slapd
+#     question: slapd/domain
+#     vtype: "string"
+#     value: "{{ ldap_domain }}"
+#   register: debconf_slapd_domain
+#
+# - name: "Reconfigure the slapd"
+#   become: yes
+#   command: dpkg-reconfigure -f noninteractive slapd
+#   when: debconf_slapd_domain.changed
