--- a/tasks/variables-database-type.yml
+++ b/tasks/variables-database-type.yml
@@ -6,8 +6,8 @@
     scope: "onelevel"
     filter: "(&(objectClass=olcDatabaseConfig)(olcDatabase={{ slapd_db_type }}))"
   check_mode: false
-  register: tmp_slapd_olcDatabase
+  register: tmp_slapd_olcDatabase_type
 
 - name: "Define slapd_olcDatabase_type_dn"
   set_fact:
-    slapd_olcDatabase_type_dn: '{{ tmp_slapd_olcDatabase.results[0].dn }}'
+    slapd_olcDatabase_type_dn: '{{ tmp_slapd_olcDatabase_type.results[0].dn }}'
