Added the start slapd daemon task so as to ldaptools can be contact with the slapd daemon.

--- a/tasks/setup-Debian.yml
+++ b/tasks/setup-Debian.yml
@@ -22,6 +22,13 @@
     name: "{{ ldap_python_modules_pip }}"
   when: slapd_install_python_module_via_pip
 
+- name: Start the slapd daemon.
+  become: true
+  systemd:
+    name: "{{ slapd_daemon }}"
+    enabled: true
+    state: started
+
 # - name: "Ensure values of the slapd with debconf."
 #   become: yes
 #   debconf:
