--- a/tasks/configure-admin.yml
+++ b/tasks/configure-admin.yml
@@ -34,3 +34,5 @@
   when: >-
     not ( ansible_os_family == "RedHat"
     and ansible_distribution_major_version == "7" )
+  tags:
+    - molecule-idempotence-notest
