--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,7 @@ jobs:
           - ubuntu2004
           - ubuntu1804
           - debian10
+          - debian9
 
     steps:
       - name: Check out the codebase.
