--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,7 @@ jobs:
           - centos7
           - ubuntu2004
           - ubuntu1804
+          - debian11
           - debian10
           - debian9
 
