--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -15,6 +15,8 @@
   when: slapd_install_module_memberof
 - include_tasks: "module-refint.yml"
   when: slapd_install_module_refint or slapd_install_module_memberof
+- include_tasks: "module-syncprov.yml"
+  when: slapd_install_module_syncprov
 - include_tasks: "schema-cosine.yml"
   when: slapd_install_schema_cosine or slapd_install_schema_nis
 - include_tasks: "schema-nis.yml"
