--- a/tasks/schema-cosine.yml
+++ b/tasks/schema-cosine.yml
@@ -9,15 +9,20 @@
   check_mode: false
   register: schema_cosine
 
-- name: "Ensure the cosine schema was registered"
-  become: true
-  ldap_entry:
-    dn: >-
+- name:  Define slapd_schema_cosine_dn
+  set_fact:
+    slapd_schema_cosine_dn: >-
       {%- if schema_cosine.results[0] is defined -%}
       {{ schema_cosine.results[0].dn }}
       {%- else -%}
       cn=cosine,cn=schema,cn=config
       {%- endif -%}
+  when: slapd_schema_cosine_dn is not defined
+
+- name: "Ensure the cosine schema was registered"
+  become: true
+  ldap_entry:
+    dn: "{{ slapd_schema_cosine_dn }}"
     objectClass: "olcSchemaConfig"
     attributes:
       cn: "cosine"
