--- a/tasks/schema-sudo.yml
+++ b/tasks/schema-sudo.yml
@@ -9,15 +9,20 @@
   check_mode: false
   register: schema_sudo
 
-- name: "Ensure the sudo schema was registered"
-  become: true
-  ldap_entry:
-    dn: >-
+- name:  Define slapd_schema_sudo_dn
+  set_fact:
+    slapd_schema_sudo_dn: >-
       {%- if schema_sudo.results[0] is defined -%}
       {{ schema_sudo.results[0].dn }}
       {%- else -%}
       cn=sudo,cn=schema,cn=config
       {%- endif -%}
+  when: slapd_schema_sudo_dn is not defined
+
+- name: "Ensure the sudo schema was registered"
+  become: true
+  ldap_entry:
+    dn: "{{ slapd_schema_sudo_dn }}"
     objectClass: "olcSchemaConfig"
     attributes:
       cn: "sudo"
